<resources>
    <string name="app_name">Diary</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_evento">Create event</string>
    <string name="title_activity_main_login">Login</string>
    <string name="title_activity_main_registro">Register user</string>
    <string name="Calendario">Diary</string>
    <string name="agregar">Add</string>
    <string name="calendario_de_eventos">Events calendar</string>
    <string name="descripcion_opcional">Description (optional)</string>
    <string name="fecha">Date</string>
    <string name="ingresa_tu_contrase_a">Insert your password</string>
    <string name="ingresa_tu_contrase_a1">Insert your password</string>
    <string name="ingresa_tu_correo">Insert your e-mail</string>
    <string name="ingresa_tu_correo1">Insert your e-mail</string>
    <string name="ingresa_tu_nombre">Insert your name</string>
    <string name="iniciar_sesi_n">Log in</string>
    <string name="limpiar">Clear</string>
    <string name="nuevo_evento">New event</string>
    <string name="registro_de_usuario">User register</string>
    <string name="titulo_del_evento">Event title</string>
    <string name="todos_los_eventos">All events</string>
    <string name="ingresa_tu_correo11">Insert your e-mail</string>
    <string name="ingresa_tu_contrase_aas">Insert your password</string>
    <string name="cargalo">Cargalo</string>
    <string name="tu_usuario_esta_en_la_nube">Is your user in the cloud?</string>
    <string name="cargalo">" Load it"</string>
    <string name="cargar_eventos">" Upload events"</string>
</resources>
